esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: esphome
    app.kubernetes.io/name: esphome
    app.kubernetes.io/version: "2023.11"
  name: exphome-esphome
  namespace: esphome
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: exphome
      app.kubernetes.io/name: esphome
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: exphome
        app.kubernetes.io/name: esphome
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: TZ
              value: America/Vancouver
          # https://github.com/esphome/esphome/releases/
          image: 'esphome/esphome:2025.8.4'
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 6052
            timeoutSeconds: 1
          name: exphome-esphome
          ports:
            - containerPort: 6052
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 6052
            timeoutSeconds: 1
          resources: {}
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 6052
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /config
              name: config
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: esphome-nfs-pvc
